kubernetes/Ingress/expingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exp-ingress
spec:
  rules:
    - http:
        paths:
        - path: "/backend"
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 4000
        - path: "/frontend"
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
